--- a/ask.html
+++ b/ask.html
@@ -41,7 +41,7 @@
  <div class="container mt-4 mx-3">
     <div class="row">
       <div class="col-10">
-        <h3>New question</h3>
+        <h3 style="margin-bottom: 15px;">New question</h3>
 
         <form class="needs-validation" novalidate>
           <div class="form-group row">
@@ -65,7 +65,7 @@
             </div>
           </div>
         
-          <button type="submit" class="btn btn-primary mx-3">Ask</button>
+          <button type="submit" class="btn btn-primary">Ask</button>
         </form>
         <script>
           // Example starter JavaScript for disabling form submissions if there are invalid fields
