--- a/base.html
+++ b/base.html
@@ -37,12 +37,12 @@
           <div class="col-10">
             <h3>Questions</h3>
           </div>
-          <div class="col-2">
-            <button type="button" class="btn btn-primary ml-2">Ask question</button>
+          <div class="col-2 ">
+            <button type="button" class="btn btn-primary ml-2 float-right"><nobr>Ask question</nobr></button>
           </div>
         </div>
 
-        <div class="card text mb-2">
+        <div class="card text my-2">
             <div class="card-header">
               <ul class="nav nav-tabs card-header-tabs">
                 <li class="nav-item">
