--- a/login.html
+++ b/login.html
@@ -31,7 +31,7 @@
  <div class="container mt-4 mx-3">
     <div class="row">
       <div class="col-10">
-        <h3>Log In</h3>
+        <h3 style="margin-bottom: 15px;">Log In</h3>
 
         <form>
 
