--- a/question.html
+++ b/question.html
@@ -32,7 +32,7 @@
  <div class="container mt-4 mx-3 mb-3">
     <div class="row">
       <div class="col-md-10">
-        <h4>How to write good code?</h4>
+        <h4 style="margin-bottom: 15px;">How to write good code?</h4>
 
         <div class="container">
 					<div class="row justify-content-center">
@@ -62,7 +62,7 @@
 					</div> 
         </div>
 
-				<h5>Answers(3)</h5>
+				<h5 style="margin-bottom: 15px; margin-top: 10px;">Answers(3)</h5>
 
 				<div class="card p-2 m-1">
 					<div class="container">
