--- a/register.html
+++ b/register.html
@@ -30,7 +30,7 @@
  <div class="container mt-4 mx-3">
     <div class="row">
       <div class="col-10">
-        <h3>Log In</h3>
+        <h3 style="margin-bottom: 15px;">Log In</h3>
 
         <form class="needs-validation" novalidate>
             <div class="form-row">
