--- a/settings.html
+++ b/settings.html
@@ -48,7 +48,7 @@
  <div class="container mt-4 mx-3">
     <div class="row">
       <div class="col-10">
-        <h3>Settings: Bob1234</h3>
+        <h3 style="margin-bottom: 15px;">Settings: Bob1234</h3>
 
         <form>
 
