--- a/tag.html
+++ b/tag.html
@@ -35,7 +35,7 @@
 
         <div class="row">
           <div class="col-10">
-            <h3>Tag: code</h3>
+            <h3 style="margin-bottom: 15px;">Tag: code</h3>
           </div>
           <div class="col-2">
             <button type="button" class="btn btn-primary ml-2">Ask question</button>
